<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Akrab</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="donthave">Dont have account yet?</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="retry">Try Again</string>
    <string name="alreadyhave">Already have account?</string>
    <string name="selamat_datang">Welcome,</string>
    <string name="user_id">User ID</string>
    <string name="token">Token</string>
    <string name="logout">Log Out</string>
    <string name="camera_x">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="not_permitted">Didn\'t get permission</string>
    <string name="choose_pic">Choose Picture</string>
    <string name="enter_image_first">Please input file first</string>
    <string name="cant_open_camera">Failed launched camera</string>
    <string name="cant_capture">Failed capture image</string>
    <string name="field_cant_empty">field can\'t be null</string>
    <string name="invalid_email">Email Invalid!</string>
    <string name="six_chara_password">Password must more than 6 character!</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="hello">Hi,</string>
    <string name="choose">Category Letter</string>
    <string name="choosenumber">Category Number</string>
    <string name="have_a_nice_day">Have a Nice day!</string>
    <string name="recommended_class">Recommended Class</string>
    <string name="insight">Insight</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="about_akrab">Akrab is an application that offers convenience for peoples who are deaf and mute as well as for the public to learn sign language.</string>
    <string name="about_apps">About Apps</string>
    <string name="about">we present to you, our project, Akrab. Akrab is an android-based learning application that is intended for people who are deaf and mute, as a media for people with disabilities as well as for the general public who care about the importance of sign language to learn. This application offers an experience of how to communicate using sign language with machine learning-based interactive lessons whenever and wherever the user wants to learn. Users can practice the sign language they’ve learned through some exercises to measure their understanding.</string>
    <string name="term2">GENERAL CONDITIONS OF USE OF THE APPLICATION When visiting and using this site, including each of its features and services, each user is required to comply with the following site user requirements: there is no minimum age limit for users, each user agrees not to copy, use or download all information, writings , images, video recordings, directories, documents, databases or advertisements contained in the Familiar application or obtained through the Familiar application for any purpose including but not limited to reselling or redistributing the contents of the Familiar application, conducting mass marketing (via email, SMS, regular mail or other), running a business to compete with the Familiar application or utilizing the Familiar application site for commercial purposes outside of transaction activities with the Familiar application. Users are not allowed to take the contents of the Familiar application systematically to create or compile, either directly or indirectly, collections, compilations, databases or directories (either using automatic tools or manual processes) without our written permission. In addition, the User is not allowed to use the content or materials mentioned above for any purpose that is not stated in this Agreement</string>
    <string name="back_to_class">Back To Class</string>
    <string name="your_answer_is_incorrect">Your Answer is Incorrect</string>
    <string name="you_haven_t_guessed_the_letter_correctly">You Haven\'t Guessed The Letter Correctly</string>
    <string name="repeat">REPEAT</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="your_answer_is_correct" tools:ignore="ExtraTranslation">Your Answer is Correct</string>
    <string name="you_guessed_the_letters_correctly" tools:ignore="ExtraTranslation">You guessed the letters correctly</string>
    <string name="continue_to_quiz" tools:ignore="ExtraTranslation">Continue to Quiz</string>
</resources>